--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2
 jobs:
   build:
+    branches:
+      only:
+        - dev
     working_directory: ~/DemoWebSource
     docker:
       - image: circleci/node:10-browsers
