--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,13 @@ jobs:
           paths:
             - "node_modules"
       - run: npm run test -- --no-watch --no-progress
-      # - run: npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
+      - run: ng build --prod
+      - run:
+          name: Creating Dummy Artifacts
+            command: |
+              echo "my artifact file" > /dist;
+              mkdir /dist;
+              # echo "my artifact files in a dir" > /tmp/artifacts/artifact-2;
+      - store_artifacts:
+        path: /DemoWebSource/dist
+        destination: /dist
