--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ jobs:
           paths:
             - "node_modules"
       - run: npm run test -- --no-watch --no-progress --code-coverage
-
+      - store_artifacts:
+          path: coverage
+          destination: coverage
       - run: ng build --prod
       # - run:
       #     name: Creating Dummy Artifacts
