--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - store_artifacts:
           path: coverage
           destination: coverage
-      - run: ng build --prod
+      - run: npm run build -- --prod
       # - run:
       #     name: Creating Dummy Artifacts
       #       command: |
