--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "angular-cli-ghpages": "^0.6.2",
     "jasmine-marbles": "^0.6.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.1",
-    "@angular/cli": "~8.1.1",
+    "@angular/cli": "8.3.0",
     "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
     "@types/node": "~8.9.4",
