updatem mock config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,7 @@
 jobs:
   test:
     steps:
+      working_directory: ~/DemoWebSource
+      docker:
+      - image: circleci/node:10-browsers
       - checkout
