--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ jobs:
     docker:
       - image: circleci/node:10-browsers
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "98:4d:55:4f:82:0b:84:c3:86:ac:8b:bd:2f:3b:f8:c9"
       - checkout
       - restore_cache:
           key: DemoWebSource-{{ .Branch }}-{{ checksum "package-lock.json" }}
@@ -16,6 +19,12 @@ jobs:
       - store_artifacts:
           path: coverage
           destination: coverage
+      
+      - run: npm run updateReadme
+      - run: git config --global user.email "jef15938@gmail.com"
+      - run: git config --global user.name "jef15938"
+      - run: git add . && git commit -m "update README"
+      - run: git push
 
   merge-to-master:
     working_directory: ~/DemoWebSource
