--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run: git config --global user.email "jef15938@gmail.com"
       - run: git config --global user.name "jef15938"
       - run: git add .
-      - run: git commit -m "update README" | echo 'nothing commit'
+      - run: git commit -m "update README" | echo 'nothing commit' || true
       - run: git push
 
   merge-to-master:
