--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "es2018",
       "dom"
     ],
+    "types": [
+      "node"
+    ],
     "resolveJsonModule": true,
     "esModuleInterop": true
   },
