--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "updateReadme": "node ./src/customTask/updateReadme.ts"
+    "updateReadme": "node ./src/customTask/updateReadme.js"
   },
   "private": true,
   "dependencies": {
