--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "@types/jest": "^25.2.1",
     "angular-cli-ghpages": "^0.6.2",
     "jasmine-marbles": "^0.6.0",
     "rxjs": "~6.4.0",
