--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: UpdateReadMe & Push to master
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -32,11 +32,11 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: push to dev
         run: |
-          git add .,
-          git commit -m "update README" | echo 'nothing commit' || true,
+          git add .
+          git commit -m "update README" | echo 'nothing commit' || true
           git push --set-upstream origin dev
           
       - name: merge to master
         run: |
-          git git checkout master && git reset origin/master --hard,
+          git git checkout master && git reset origin/master --hard
           git merge dev && git push
