--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+        with:
+          ref: 'dev'
       # Runs a single command using the runners shell
       - name: npm install
         run: npm install
@@ -45,4 +46,4 @@ jobs:
         run: |
           git config --global user.email "jef15938@gmail.com"
           git config --global user.name "jef15938"
-          git merge origin/dev && git push
+          git merge dev && git push
