update version to 0.0.13

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,5 @@ jobs:
         run: |
           git config --global user.email "jef15938@gmail.com"
           git config --global user.name "jef15938"
+          git reset origin/master --hard
           git merge origin/dev --allow-unrelated-histories && git push
