--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  test:
+  updateReadme_MergeToMaster:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -47,7 +47,7 @@ jobs:
         run: |
           git config --global user.email "jef15938@gmail.com"
           git config --global user.name "jef15938"
-          git pull
+          git fetch
           git log -1
           git log origin/dev -1
           git merge origin/dev --allow-unrelated-histories && git push
