--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           git config --global user.email "jef15938@gmail.com"
           git config --global user.name "jef15938"
           git reset origin/master --hard
+          git branch
           git status
           git log -1
-          git log dev -1
           git merge dev && git push
