--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,7 @@ jobs:
           git config --global user.email "jef15938@gmail.com"
           git config --global user.name "jef15938"
           git log -1
+          git reset origin/master --hard
+          git status
           git log origin/dev -1
           git merge origin/dev --allow-unrelated-histories && git push
