--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,15 +40,15 @@ jobs:
       #     git push
       #     git log -1
           
-      - uses: actions/checkout@v2
-        with:
-          ref: 'master'
-      - name: merge to master
-        run: |
-          git config --global user.email "jef15938@gmail.com"
-          git config --global user.name "jef15938"
-          git log -1
-          git reset origin/master --hard
-          git status
-          git log origin/dev -1
-          git merge origin/dev --allow-unrelated-histories --ff && git push
+      # - uses: actions/checkout@v2
+      #   with:
+      #     ref: 'master'
+      # - name: merge to master
+      #   run: |
+      #     git config --global user.email "jef15938@gmail.com"
+      #     git config --global user.name "jef15938"
+      #     git log -1
+      #     git reset origin/master --hard
+      #     git status
+      #     git log origin/dev -1
+      #     git merge origin/dev --allow-unrelated-histories --ff && git push
