--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo-web-source",
-  "version": "0.0.29.1",
+  "version": "0.0.29",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -28,6 +28,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@fail": "1.2.3",
     "@angular-devkit/build-angular": "~0.801.1",
     "@angular/cli": "8.3.0",
     "@angular/compiler-cli": "~8.1.1",
