--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: 'dev'
+
+      - name: git log
+        run: git log -1
+        
       # Runs a single command using the runners shell
       - name: npm install
         run: npm install
